RI-91 bugfix image jumping on mobile divices ViP.

--- a/src/App.css
+++ b/src/App.css
@@ -110,10 +110,7 @@ button {
 html,
 body,
 #root {
-  height: 100vh;
-  height: -moz-available; /* WebKit-based browsers will ignore this. */
-  height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-  height: fill-available;
+  height: 100%;
 }
 
 #root {
